--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@
   padding: 0;
 }
 
-h1 {
-  text-align: center;
-}
 
 .container {
   width: 80%;
@@ -61,14 +58,25 @@ header a:hover {
   color: #cccccc;
 }
 
-section{
+section {
   background-image: url('../img/my_pic.JPG');
   height: 100vh;
   background-attachment: fixed;
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
+section h1 {
+  font-size: 100px;
+  color: rgb(250, 250, 250);
+  text-shadow: 1px 1px 2px black, 0 0 75px blue, 0 0 25px darkblue;
+  text-transform: uppercase;
+  position: absolute;
 }
 
 @media(max-width: 650px) {
