--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@
   overflow: hidden;
 }
 
-ul {
-  margin: 0;
-  padding: 0;
-}
-
 header {
   background: red;
   background-image: linear-gradient(-45deg,
@@ -22,7 +17,7 @@ header {
     #0ec19c);
   color: #ffffff;
   padding-top: 30px;
-  min-height: 70px;
+  max-height: 70px;
 }
 
 header a {
@@ -58,7 +53,7 @@ header a:hover {
   color: #cccccc;
 }
 
-section {
+section#home{
   background-image: url('../img/my_pic.JPG');
   height: 100vh;
   background-attachment: fixed;
@@ -76,7 +71,18 @@ section h1 {
   color: rgb(250, 250, 250);
   text-shadow: 1px 1px 2px black, 0 0 75px blue, 0 0 25px darkblue;
   text-transform: uppercase;
-  position: absolute;
+  position: relative;
+}
+
+section#about{
+  background-color: rgb(140, 214, 163);
+  height: 50vh;
+
+}
+
+section#contact{
+  background-color: rgb(238, 142, 54);
+  height: 100vh;
 }
 
 @media(max-width: 650px) {
