--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,18 @@ header {
     #0ec19c);
   color: #ffffff;
   height: 70px;
+  overflow: hidden;
 }
 
 header a {
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  font-style: 16px;
+  fo
+}
+
+header h1 {
+  font-size: 2em;
 }
 
 header li {
@@ -52,26 +57,37 @@ header a:hover {
   color: #cccccc;
 }
 
-section#home {
+#home {
   background-image: url('../img/my_pic.JPG');
   height: 100vh;
-  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  padding: 0 20px;
 }
 
-section h1 {
-  font-size: 100px;
+
+.containerA{
+  width: 80%;
+  margin: auto;
+  border-radius: 7px;
+  overflow: hidden;
+  padding: 20px;
+  font-size: 3.5rem;
+
+}
+
+
+
+#home .containerA h1 {
   color: rgb(250, 250, 250);
   text-shadow: 1px 1px 2px black, 0 0 75px blue, 0 0 25px darkblue;
   text-transform: uppercase;
-  position: relative;
-display: flex;
 
 }
 
@@ -240,7 +256,13 @@ footer p {
   color: #fcfcfc;
 }
 
-@media(max-width: 650px) {
+@media (max-width: 950px) {
+  .containerA h1{
+   font-size: 1.2em;
+   margin: auto;
+ }
+}
+@media(max-width: 750px) {
 
   header #branding,
   header nav,
@@ -255,7 +277,28 @@ footer p {
     padding-bottom: 15px;
   }
 
+   .containerA h1{
+    font-size: 1em;
+    margin: auto;
+  }
+  .containerA{
+    width: 100%;
+  }
+
   .column {
     width: 100%;
+  }
+}
+
+@media (max-width:550px) {
+.containerA h1{
+  font-size: 0.8em;
+  margin: auto;
+}
+}
+@media (max-width: 400px) {
+  .containerA h1{
+    font-size: 0.5em;
+    margin: auto;
   }
 }
